--- a/Save_cropped_images.ipynb
+++ b/Save_cropped_images.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "93HGbj9xlUSb"
    },
@@ -33,9 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-12 18:38:35.778978: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-06-12 18:38:35.954358: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-12 18:38:36.827599: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-12 18:38:36.833009: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-06-12 18:38:38.956677: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "from global_functions import *"
    ]
@@ -51,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "img_width = 224\n",
     "img_height = 224\n",
@@ -83,9 +104,9 @@
     "id": "s5Exv7hO4_D6"
    },
    "source": [
-    "## Salvar imagens recortadas (cropped)\n",
-    "Imagens lidas a partir dos diretórios <dataset>_<emotion>, por exemplo, CK_Angry (emotion:[Angry, Happy, Sad, Fear])\n",
-    "REPETIR O PROCESSO PARA CADA DATASET DISPONÍVEL    "
+    "## Save cropped images \n",
+    "Images read from <dataset>_<emotion> directories, e.g. CK_Angry (emotion:[Angry, Happy, Sad, Fear])\n",
+    "REPEAT THE PROCESS FOR EACH AVAILABLE DATASET"
    ]
   },
   {
@@ -101,26 +122,25 @@
    },
    "outputs": [],
    "source": [
-    "#emotions_labels = {0:'raiva', 1:'aversão', 2:'medo', 3:'alegria', 4: 'tristeza', 5: 'surpresa', 6: 'desprezo'}\n",
     "DATASET = 'NIMH'\n",
-    "files_raiva = obter_imagens(DATASET+'_Angry', 'png')\n",
-    "filesclass_raiva = obter_classes(len(files_raiva), 0)\n",
-    "print(len(files_raiva))\n",
+    "files_angry = obter_imagens(DATASET+'_Angry', 'png')\n",
+    "filesclass_angry = obter_classes(len(files_angry), 0)\n",
+    "print(len(files_angry))\n",
     "\n",
-    "files_medo = obter_imagens(DATASET+'_Fear', 'png')\n",
-    "filesclass_medo = obter_classes(len(files_medo), 1)\n",
-    "print(len(files_medo))\n",
+    "files_fear = obter_imagens(DATASET+'_Fear', 'png')\n",
+    "filesclass_fear = obter_classes(len(files_fear), 1)\n",
+    "print(len(files_fear))\n",
     "\n",
-    "files_alegria = obter_imagens(DATASET+'_Happy', 'png')\n",
-    "filesclass_alegria = obter_classes(len(files_alegria), 2)\n",
-    "print(len(files_alegria))\n",
+    "files_happy = obter_imagens(DATASET+'_Happy', 'png')\n",
+    "filesclass_happy = obter_classes(len(files_happy), 2)\n",
+    "print(len(files_happy))\n",
     "\n",
-    "files_tristeza = obter_imagens(DATASET+'_Sad', 'png')\n",
-    "filesclass_tristeza = obter_classes(len(files_tristeza), 3)\n",
-    "print(len(files_tristeza))\n",
+    "files_sad = obter_imagens(DATASET+'_Sad', 'png')\n",
+    "filesclass_sad = obter_classes(len(files_sad), 3)\n",
+    "print(len(files_sad))\n",
     "\n",
-    "files = np.concatenate((files_raiva, files_medo, files_alegria, files_tristeza), axis=0)\n",
-    "files_class = np.concatenate((filesclass_raiva, filesclass_medo, filesclass_alegria, filesclass_tristeza), axis=0)\n",
+    "files = np.concatenate((files_angry, files_fear, files_happy, files_sad), axis=0)\n",
+    "files_class = np.concatenate((filesclass_angry, filesclass_fear, filesclass_happy, filesclass_sad), axis=0)\n",
     "print(len(files))\n",
     "print(len(files_class))"
    ]
@@ -131,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CRIA DIRETÓRIO <DATASET>_<EMOTION>_CROPPED\n",
+    "#create directory <DATASET>_<EMOTION>_CROPPED\n",
     "save_cropped_image(files, k=10, size=224, inicio=0, fim=0)"
    ]
   }
